--- a/.project
+++ b/.project
@@ -31,4 +31,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin</name>
+			<type>2</type>
+			<location>/srv/VirtualEnv/SmoWebPlatform/bin</location>
+		</link>
+	</linkedResources>
 </projectDescription>
